All the default values and heuristics for Standalone done